<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Explore CA</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_all">All</string>
    <string name="menu_cheap">Cheap</string>
    <string name="menu_fancy">Fancy</string>
    <string name="menu_mytours">My Tours</string>
    <string name="btn_createfile">Create file</string>
    <string name="btn_readfile">Read file</string>
    <string name="menu_add">Add to My Tours</string>

</resources>